Render capture stepper also during loading to avoid flickering

--- a/ui/src/pages/session-details/playback/playback.module.scss
+++ b/ui/src/pages/session-details/playback/playback.module.scss
@@ -43,7 +43,6 @@
 .captureNavigationWrapper {
   display: flex;
   align-items: flex-start;
-  height: 48px;
   margin-bottom: 16px;
 }
 
